Fix favorite button.
Fix facebook widget width

Fix opacity

--- a/app/assets/stylesheets/base/layout.css.scss
+++ b/app/assets/stylesheets/base/layout.css.scss
@@ -31,6 +31,9 @@ img, iframe {
   max-width: 100%;
 }
 
+.fb_iframe_widget iframe {
+  max-width: none !important;
+}
 
 .navbar-brand {
   background-image: url("/assets/logo-sprite.png");
