Capitalise XML Acronym

--- a/frontend/app/templates/onboarding/library.hbs
+++ b/frontend/app/templates/onboarding/library.hbs
@@ -15,7 +15,7 @@
       {{#if importFromMal}}
         <i class="fa fa-spinner"></i> Hang tight, we're importing your data.
       {{else}}
-        Have a MAL account? <a href="#" {{action 'importLibrary'}}>We can import your xml back-up!</a>
+        Have a MAL account? <a href="#" {{action 'importLibrary'}}>We can import your XML back-up!</a>
         <a href="http://myanimelist.net/panel.php?go=export" target="_blank" class="import-help"><i class="fa fa-question-circle"></i></a>
       {{/if}}
     </div>
