--- a/frontend/app/templates/components/instant-search.hbs
+++ b/frontend/app/templates/components/instant-search.hbs
@@ -5,7 +5,7 @@
 
   {{#if searchResults}}
     <ul class="search-dropdown">
-      {{#each result in searchResults}}
+      {{#each searchResults as |result|}}
         <li class="search-result">
           {{#link-to result.type result.link title=result.title}}
             <div class="search-result-thumb">
