--- a/frontend/app/templates/modals/story-likes.hbs
+++ b/frontend/app/templates/modals/story-likes.hbs
@@ -8,10 +8,10 @@
           <i class="fa fa-heart"></i> {{totalVotes}}
         </div>
         <ul>
-          {{#each likers}}
-            <li {{bind-attr data-tooltip=username}}>
-              {{#link-to 'user' username}}
-                <img {{bind-attr src=avatar}}>
+          {{#each likers as |liker|}}
+            <li {{bind-attr data-tooltip=liker.username}}>
+              {{#link-to 'user' liker.username}}
+                <img {{bind-attr src=liker.avatar}}>
               {{/link-to}}
             </li>
           {{/each}}
@@ -23,5 +23,3 @@
     </div>
   {{/bootstrap-modal}}
 </div>
-
-
