--- a/frontend/app/templates/story/followed.hbs
+++ b/frontend/app/templates/story/followed.hbs
@@ -20,14 +20,14 @@
     <div class="comment-text">
       <div class="clearfix"></div>
       <ul class="follow-bubbles">
-        {{#each displaySubstories}}
+        {{#each displaySubstories as |substory|}}
           <li>
-            {{#link-to 'user' user}}
+            {{#link-to 'user' substory.user}}
               <div class="user-bubble">
                 <div class="bubble-avatar">
-                  {{avatar user "thumb_small"}}
+                  {{avatar substory.user "thumb_small"}}
                 </div>
-                <h4 class="bubble-name">{{user.username}}</h4>
+                <h4 class="bubble-name">{{substory.user.username}}</h4>
               </div>
             {{/link-to}}
           </li>
