--- a/frontend/app/templates/user/groups.hbs
+++ b/frontend/app/templates/user/groups.hbs
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    {{#each group in model}}
+    {{#each model as |group|}}
       <div class="col-sm-4">
         {{group-box group=group}}
       </div>
