--- a/frontend/app/templates/anime/_trending_reviews.hbs
+++ b/frontend/app/templates/anime/_trending_reviews.hbs
@@ -1,4 +1,4 @@
-{{#each trendingReviews itemController="review"}}
+{{#each trendingReviews itemController="review" as |review|}}
   {{partial "media/review_summary"}}
 {{else}}
   <div class="trending-review-empty">
