--- a/frontend/app/templates/apps/mine.hbs
+++ b/frontend/app/templates/apps/mine.hbs
@@ -1,15 +1,15 @@
 <h2>My Apps</h2>
 <div class="block-grid-md-2 blog-grid-sm-1">
-  {{#each}}
+  {{#each model as |app|}}
     <div class="block-grid-item">
       <div class="app-card">
         <div class="app-inner">
-          <h3 class="app-title">{{name}}</h3>
+          <h3 class="app-title">{{app.name}}</h3>
           <dl>
             <dt>Key</dt>
-            <dd class="app-token">{{key}}</dd>
+            <dd class="app-token">{{app.key}}</dd>
             <dt>Secret</dt>
-            <dd class="app-token">{{secret}}</dd>
+            <dd class="app-token">{{app.secret}}</dd>
           </dl>
         </div>
       </div>
