--- a/frontend/app/templates/components/favorite-search.hbs
+++ b/frontend/app/templates/components/favorite-search.hbs
@@ -1,9 +1,8 @@
 {{input value=query classNames="search-field" placeholder="Search for..."}}
 
-
 {{#if filteredSearchResults}}
   <ul class="search-dropdown">
-    {{#each result in filteredSearchResults}}
+    {{#each filteredSearchResults as |result|}}
       <li class="search-result grid-list">
           <div class="grid-position">
             <a {{action 'addMediaToFavorites' result}}>
@@ -11,8 +10,7 @@
             </a>
           </div>
           <img class="grid-list-thumb" {{bind-attr src="result.image"}} />
-          <div class="grid-list-title">{{result.title}}</div>
-          {{!-- <span {{bind-attr class=":search-result-badge :badge result.type"}}>{{result.type}}</span> --}}
+          <div class="grid-list-title">{{result.title}}</div>}
       </li>
     {{/each}}
   </ul>
