--- a/frontend/app/templates/group/members.hbs
+++ b/frontend/app/templates/group/members.hbs
@@ -1,10 +1,10 @@
 <div class="container">
 
-  <!-- Only show pending section if there are pending members -->
+  {{! Only show pending section if there are pending members }}
   {{#if hasPendings}}
     <div class="group-pending">
       <h3>Pending Members</h3>
-      {{#each member in pending}}
+      {{#each pending as |member|}}
         <div class="follow-panel-wrapper">
           <div class="follow-panel">
             {{#link-to 'user' member.user}}
@@ -45,7 +45,7 @@
   {{#if hasStaff}}
     <div class="group-staff">
       <h3>Group Staff</h3>
-      {{#each member in staff}}
+      {{#each staff as |member|}}
         <div class="follow-panel-wrapper">
           <div class="follow-panel">
             {{#link-to 'user' member.user}}
@@ -94,7 +94,7 @@
   {{#if hasPlebs}}
     <div class="group-members">
       <h3>Group Members</h3>
-      {{#each member in plebs}}
+      {{#each plebs as |member|}}
         <div class="follow-panel-wrapper">
           <div class="follow-panel">
             {{#link-to 'user' member.user}}
