--- a/frontend/app/templates/notifications.hbs
+++ b/frontend/app/templates/notifications.hbs
@@ -2,7 +2,7 @@
   <div class="row" style="margin-top: 50px">
     <div class="col-md-6 col-md-offset-3">
       <ul class="all-notifications">
-        {{#each}}
+        {{#each model as |notification|}}
           {{partial "notification"}}
         {{/each}}
       </ul>
