--- a/frontend/app/templates/onboarding/library.hbs
+++ b/frontend/app/templates/onboarding/library.hbs
@@ -45,29 +45,29 @@
     {{loading-indicator}}
   {{else}}
     {{#if showManga}}
-      {{#each mangaData}}
+      {{#each mangaData as |manga|}}
         <li class="block-grid-item">
           <div class="thumbnail">
-            <img {{bind-attr src=posterImage}} />
+            <img {{bind-attr src=manga.posterImage}} />
           </div>
-          <span class="library-title">{{englishTitle}}</span>
+          <span class="library-title">{{manga.englishTitle}}</span>
           <div class="awesome-rating-widget">
-            {{awesome-rating type=currentUser.ratingType editable="true" action="setLibraryRating" rating=libraryEntry.rating}}
+            {{awesome-rating type=currentUser.ratingType editable="true" action="setLibraryRating" rating=manga.mangaLibraryEntry.rating media=manga}}
           </div>
         </li>
       {{else}}
         No search results ...
       {{/each}}
     {{else}}
-      {{#each animeData}}
+      {{#each animeData as |anime|}}
         <li class="block-grid-item">
           <div class="thumbnail">
-            <img {{bind-attr src=posterImage}} />
+            <img {{bind-attr src=anime.posterImage}} />
           </div>
-          <span class="library-title">{{canonicalTitle}}</span>
+          <span class="library-title">{{anime.canonicalTitle}}</span>
           <div class="awesome-rating-widget">
             <h5 class="sidebar-title text-center">Your Rating</h5>
-            {{awesome-rating type=currentUser.ratingType editable="true" action="setLibraryRating" rating=libraryEntry.rating}}
+            {{awesome-rating type=currentUser.ratingType editable="true" action="setLibraryRating" rating=anime.libraryEntry.rating media=anime}}
           </div>
         </li>
       {{else}}
