--- a/frontend/app/templates/story/media_story.hbs
+++ b/frontend/app/templates/story/media_story.hbs
@@ -7,12 +7,12 @@
       {{#link-to mediaRoute media.id}}{{unbound media.displayTitle}}{{/link-to}}
     </h4>
     <ul class="genre-list">
-      {{#each genre in media.genres}}
+      {{#each media.genres as |genre|}}
         <li>{{unbound genre}}</li>
       {{/each}}
     </ul>
     <ul class="feed-events">
-      {{#each substory in displaySubstories}}
+      {{#each displaySubstories as |substory|}}
         <li class="single-event">
           <div class="row">
             <div class="col-md-11">
