--- a/frontend/app/templates/user/reviews.hbs
+++ b/frontend/app/templates/user/reviews.hbs
@@ -1,14 +1,14 @@
 <div class="user-review-listing">
-  {{#each}}
+  {{#each model as |review|}}
     <div class="review-columns">
-      {{#link-to 'reviews.show' anime.id id}}
+      {{#link-to 'reviews.show' review.anime.id review.id}}
         <div class="review">
-          <h4 class="reviewer-name">{{anime.displayTitle}}</h4>
+          <h4 class="reviewer-name">{{review.anime.displayTitle}}</h4>
           <span class="review-stars">
-            {{stars rating}}
+            {{stars review.rating}}
           </span>
-          <p class="review-summary"> {{summary}}</p>
-          <p class="review-likes"> {{positiveVotes}} out of {{totalVotes}} users found this review helpful.</p>
+          <p class="review-summary"> {{review.summary}}</p>
+          <p class="review-likes"> {{review.positiveVotes}} out of {{review.totalVotes}} users found this review helpful.</p>
         </div>
       {{/link-to}}
     </div>
